--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-develop-server": "^0.2.5",
+    "gulp-livereload": "^3.4.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-uglify": "^1.1.0"
   }
 }
