--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-develop-server": "^0.2.5",
     "gulp-livereload": "^3.4.0",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "q": "^1.1.2"
   }
 }
